--- a/app/src/main/res/layout/activity_samariter.xml
+++ b/app/src/main/res/layout/activity_samariter.xml
@@ -50,7 +50,13 @@
             android:text="Notrufnummern"
             android:textColor="@color/black"/>
 
-
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnHygiene"
+            android:text="Lagerhygiene"
+            android:textColor="@color/black"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 
@@ -427,6 +433,76 @@
             </LinearLayout>
         </ScrollView>
     </RelativeLayout> <!-- Notrufnummern -->
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/relHygiene"
+        android:background="@color/lightgreen"
+        android:visibility="gone">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="70dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Lagerhygiene"
+                    android:textSize="20dp"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/algHygiene"
+                    android:textSize="15dp"
+                    android:layout_marginTop="10dp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:text="Körperhygiene"/>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="270dp"
+                    android:src="@drawable/haendewaschen"
+                    android:layout_marginTop="10dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Körperhygiene"
+                    android:textSize="15dp"
+                    android:layout_marginTop="5dp"/>
+                
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:text="Trinkwasser"
+                    android:layout_marginTop="10dp"/>
+                
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Wasserhygiene"
+                    android:textSize="15dp"/>
+
+            </LinearLayout>
+        </ScrollView>
+    </RelativeLayout> <!-- Lagerhygiene -->
+
     <Button
         android:id="@+id/btnSamariter"
         android:layout_width="wrap_content"
@@ -439,6 +515,7 @@
         android:textSize="25dp"
         android:textStyle="bold"
         />
+
     <Button
         android:id="@+id/btnHomeIcon"
         android:layout_width="75dp"
