--- a/app/src/main/res/layout/activity_samariter.xml
+++ b/app/src/main/res/layout/activity_samariter.xml
@@ -127,7 +127,7 @@
         android:layout_height="match_parent"
         android:id="@+id/relVerbände"
         android:background="@color/lightgreen"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -197,6 +197,11 @@
                     android:textSize="15dp"
                     android:text="@string/druckVerband"/>
 
+                <WebView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/webDruckverband"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -215,6 +220,11 @@
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
                     android:text="@string/deckVerband"/>
+
+                <WebView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:id="@+id/webAhrenverband"/>
 
             </LinearLayout>
 
