--- a/app/src/main/res/layout/activity_samariter.xml
+++ b/app/src/main/res/layout/activity_samariter.xml
@@ -127,7 +127,7 @@
         android:layout_height="match_parent"
         android:id="@+id/relVerbände"
         android:background="@color/lightgreen"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -322,7 +322,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Feuerwehr"
+                            android:text="Feuer-\nwehr"
                             android:textSize="15dp"
                             android:padding="8dp"
                             android:gravity="center"/>
@@ -374,7 +374,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Tox-Zentrum*"
+                            android:text="Tox-\nZentrum*"
                             android:textSize="15dp"
                             android:padding="8dp"
                             android:gravity="center"/>
