--- a/app/src/main/res/layout/activity_samariter.xml
+++ b/app/src/main/res/layout/activity_samariter.xml
@@ -141,7 +141,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:gravity="center_horizontal">
+                android:gravity="center_horizontal"
+                tools:ignore="WebViewLayout">
 
                 <TextView
                     android:layout_width="wrap_content"
