--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -124,7 +124,7 @@
         android:layout_width="150dp"
         android:layout_height="match_parent"
         android:layout_marginStart="0dp"
-        android:background="@color/darkgreen"
+        android:background="@color/transparent"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
