Schissstand zu Schiessstand

--- a/app/src/main/res/layout/activity_karte.xml
+++ b/app/src/main/res/layout/activity_karte.xml
@@ -573,7 +573,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="Schissstand"
+                            android:text="Schiessstand"
                             android:textSize="15dp"
                             android:padding="8dp"
                             android:gravity="center"/>
