--- a/app/src/main/res/layout/activity_natur.xml
+++ b/app/src/main/res/layout/activity_natur.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Natur"
+    tools:context="com.pfadi.pfaditechnik.Natur"
     android:background="@color/lightgreen">
 
     <LinearLayout
