--- a/app/src/main/res/layout/activity_pfadigeschichte.xml
+++ b/app/src/main/res/layout/activity_pfadigeschichte.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pfadigeschichte"
+    tools:context="com.pfadi.pfaditechnik.Pfadigeschichte"
     android:background="@color/lightgreen">
 
     <LinearLayout
